
syntax="proto3";

package users;

//--------------------- User Auth Service --------------------------------//

service UserAuthService {
    rpc createUser(createUserDto) returns(createUserResponse){}
    rpc findUserById(findUserByIdDto) returns(findUserResponse){}
    rpc verifyOTP(otpVerifyDto)returns(verifyOTPResponse){}
}


message createUserResponse {
    int32 status = 1;
    string message = 2;
    User data = 3;
}

message findUserResponse {
    int32 status = 1;
    string message = 2;
     User data = 3;
}

message verifyOTPResponse {
    int32 status = 1;
    string message = 2;
    responseStatus data = 3;
}

message responseStatus {
    bool status = 1;
}

message otpVerifyDto {
    string otp = 1;
}

message User {
    string id = 1;
    string name =2;
    string phone = 3;
    string district = 4;
    string accessToken= 5;
    string refreshToken=6;
    string type = 7;
}

message createUserDto {
    string name = 1;
    string phone = 2;
    string district = 3;
    string isStudent = 4;
    string type = 5;
}

message findUserByIdDto {
    string id = 1;
}

//----------------------------------------------------------------------------//